[tool.poetry]
name = "catalogs"
version = "0.1.0"
description = ""
authors = ["Tamerlan <tamerlan.abilov95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
httpx = "^0.26.0"
pytest = "^8.0.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
